# satellite

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  _config.yml  blocksat-cfg.py  blocksat-cli.bash-completion  blocksat-cli.py  blocksat-gui.py  blocksat.py  channels.conf  index.md  install_gr_framers.sh  install_mods.sh  launch.py  set_rp_filter.sh  set_rp_filters.py  setup.py  setup_cli.py  setup_gui.py  tox.ini
.github/workflows/: test.yml
api/: README.md
api/examples/: README.md  api_data_reader.py  api_data_sender.py  demo-rx.py  generate_keys.py  pipe.py  requirements.txt
blocksat/: bitcoin.py  config.py  defs.py  firewall.py  gqrx.py  instructions.py  rp.py  sdr.py  standalone.py  usb.py  util.py
blocksatcli/: bitcoin.py  cache.py  config.py  currency.py  daemon_client.py  defs.py  dependencies.py  firewall.py  gqrx.py  instructions.py  ip.py  main.py  monitor.py  monitoring.py  monitoring_api.py  rp.py  satip.py  sdr.py  standalone.py  test_bitcoin.py  test_cache.py  test_config.py  test_firewall.py  test_gqrx.py  test_helpers.py  test_monitoring.py  test_monitoring_api.py  test_satip.py  test_tsp.py  test_update.py  test_usb.py  test_util.py  tsp.py  update.py  upnp.py  usb.py  util.py  verify_deps_instal.py
blocksatcli/api/: api.py  bidding.py  demorx.py  error.py  fec.py  gpg.py  invoice.py  listen.py  msg.py  net.py  order.py  pkt.py  test_bidding.py  test_fec.py  test_gpg.py  test_listen.py  test_msg.py  test_net.py  test_order.py  test_pkt.py
blocksatcli/gpg/: 87D07253F69E4CD8629B0A21A94A007EC9D4458C.gpg
blocksatcli/mib/: NOVRA-MIB.mib  NOVRA-s400-MIB.mib
blocksatgui/: app.py  blocksatd.py  config.py  error.py  help.py  main.py  mainwindow.py  overview.py  qt.py  settings.py  styles.py  update.py  utils.py
blocksatgui/components/: buttons.py  cards.py  copy.py  defaultwizard.py  dialogs.py  gpg.py  indicators.py  messagebox.py  optionbox.py  page.py  progressbar.py  stacked.py  statusbar.py  table.py  threadlogger.py  topbar.py  tray.py  viewer.py  worker.py
blocksatgui/config/: blocksatgui.desktop  blockstream-satellite.service  com.blockstream.satellite.conf  com.blockstream.satellite.policy
blocksatgui/daemon/: config.py  daemon.py  daemonstatus.py  dependencies.py
blocksatgui/receiver/: configwizard.py  (+7 more)
doc/: README.md  antenna-pointing.md  api.md  base-station.md  basic-kit.md  bitcoin.md  docker.md  dual-satellite.md  fibre.md  frequency.md  hardware-components.md  hardware.md  intro.md  mkdocs.dockerfile  mkdocs.md  mkdocs.yml  monitoring.md  pandoc.py  pandoc_builder.docker  pandoc_setup.sh  pro-kit.md  quick-reference.md  receiver.md  s400.md  sat-ip.md  sdr-setup.md  sdr.md  software.md  tbs.md
docker/: Dockerfile  Dockerfile-gnuradio_profile  README.md  blocksat-host.docker  config.conf  docker-compose.yml  entrypoint.sh  sdr.docker  usb.docker  vncserver.sh  volk_config-intel-joule-570x
examples/: README.md  api_data_reader.py  api_data_sender.py  demo-rx.py  generate_keys.py  requirements.txt
gr-mods/: CMakeLists.txt  MANIFEST.md
gr-mods/grc/: CMakeLists.txt  mods_argpeak.xml  mods_da_carrier_phase_rec.xml  mods_exponentiate_const_cci.xml  mods_ffw_coarse_freq_rec.xml  mods_fifo_async_sink.xml  mods_fifo_async_source.xml  mods_file_sink_nonblock.xml  mods_file_source_nonblock.xml  mods_frame_sync_cc.xml  mods_frame_sync_fast.xml  mods_frame_synchronizer.xml  mods_mer_measurement.xml  mods_nco_cc.xml  mods_runtime_cfo_ctrl.xml  mods_turbo_decoder.xml  mods_turbo_encoder.xml  mods_variable_rx_logger.xml  mods_variable_tuning_control.xml  mods_wrap_fft_index.xml
gr-mods/include/Module/: CMakeLists.txt  Module.hpp
gr-mods/include/Module/Decoder/: Decoder_SIHO.hpp  Decoder_SISO.hpp  Decoder_SISO_SIHO.hpp  SC_Decoder_HIHO.hpp  SC_Decoder_SIHO.hpp  SC_Decoder_SISO.hpp  SPU_Decoder_HIHO.hpp  SPU_Decoder_SIHO.hpp  SPU_Decoder_SISO.hpp
gr-mods/include/Module/Decoder/NO/: Decoder_NO.hpp
gr-mods/include/Module/Decoder/RSC/BCJR/: Decoder_RSC_BCJR.hpp  Decoder_RSC_BCJR.hxx
gr-mods/include/Module/Decoder/RSC/BCJR/Seq/: Decoder_RSC_BCJR_seq.hpp  Decoder_RSC_BCJR_seq.hxx  Decoder_RSC_BCJR_seq_very_fast.hpp  Decoder_RSC_BCJR_seq_very_fast.hxx
gr-mods/include/Module/Decoder/Turbo/: Decoder_turbo.hpp  Decoder_turbo_fast.hpp
gr-mods/include/Module/Encoder/: Encoder.hpp  Encoder_sys.hpp  SC_Encoder.hpp  SPU_Encoder.hpp
gr-mods/include/Module/Encoder/RSC/: Encoder_RSC_generic_sys.hpp  Encoder_RSC_sys.hpp
gr-mods/include/Module/Encoder/Turbo/: Encoder_turbo.hpp
gr-mods/include/Module/Interleaver/: Interleaver.hpp  SC_Interleaver.hpp  SPU_Interleaver.hpp
gr-mods/include/Module/Interleaver/LTE/: Interleaver_LTE.hpp
gr-mods/lib/: CMakeLists.txt  Decoder_NO.cpp  Decoder_turbo.cpp  Decoder_turbo_fast.cpp  Encoder.cpp  Encoder_AZCW.cpp  Encoder_NO.cpp  Encoder_RSC_generic_sys.cpp  Encoder_RSC_sys.cpp  Encoder_coset.cpp  Encoder_turbo.cpp  Encoder_user.cpp  Factory.cpp  argpeak_impl.cc  argpeak_impl.h  bash_tools.cpp  cannot_allocate.cpp  da_carrier_phase_rec_impl.cc  da_carrier_phase_rec_impl.h  exception.cpp  exponentiate_const_cci_impl.cc  exponentiate_const_cci_impl.h  frame_sync_fast_impl.cc  frame_sync_fast_impl.h  invalid_argument.cpp  length_error.cpp  mer_measurement_impl.cc  mer_measurement_impl.h  nco_cc_impl.cc  nco_cc_impl.h  qa_mods.cc  qa_mods.h  runtime_cfo_ctrl_impl.cc  runtime_cfo_ctrl_impl.h  runtime_error.cpp  t_compila  test_mods.cc  turbo_decoder_impl.cc  turbo_decoder_impl.h  turbo_encoder_impl.cc  (+4 more)
grc/: blocksat_rx.grc  blocksat_rx_gui.grc  blocksat_rx_lower.grc  blocksat_rx_lower_gui.grc  blocksat_rx_rec.grc  blocksat_rx_sim.grc  blocksat_rx_upper.grc  blocksat_rx_upper_gui.grc  blocksat_rx_usrp.grc  blocksat_rx_usrp_gui.grc  bs_rx.grc  bs_rx_gui.grc  bs_rx_lower.grc  bs_rx_lower_gui.grc  bs_rx_upper.grc  bs_rx_upper_gui.grc  bs_rx_usrp.grc  bs_rx_usrp_gui.grc  rt_initial_tuning.grc  rt_initial_tuning.py  rx.grc  rx.py  rx_gui.grc  rx_gui.py  rx_lower.grc  rx_lower_gui.grc  rx_upper.grc  rx_upper_gui.grc
util/: log_analyzer.py  tbsdriver.sh
(+94 files in other folders)
